<resources>
    <string name="app_name">Qwerteach</string>
    <string name="email_sign_up_button">S\'inscrire par e-mail</string>
    <string name="google_sign_up_button">S\'inscrire avec Google</string>
    <string name="facebook_sign_up_button">Continuer avec Facebook</string>
    <string name="sign_up_textview">J\'ai déjà un compte</string>
    <string name="title_activity_email_sign_up">Créer un compte</string>
    <string name="email_edit_text">Adresse e-mail</string>
    <string name="password_edit_text">Mot de passe</string>
    <string name="password_confirmation_edit_text">Confirmer mot de passe</string>
    <string name="or_textview">OU</string>
    <string name="title_activity_sign_in">Se connecter</string>
    <string name="facebook_sign_in_button">Se connecter via Facebook</string>
    <string name="google_sign_in_button">Se connecter à l\'aide de Google</string>
    <string name="connection_email_textview">Connexion par e-mail</string>
    <string name="forget_password">Mot de passe oublié ?</string>
    <string name="sign_up_button">INSCRIPTION</string>
    <string name="sign_in_button">CONNEXION</string>
    <string name="sign_out_button">DECONNEXION</string>
    <string name="cancel_button">ANNULER</string>
    <string name="sign_up_connection_problem_message">Création du compte inpossible. Réessayez lorsque vous serez connecté !</string>
    <string name="password_confirmation_problem_message">"La confirmation du mot de passe ne correspond pas.</string>
    <string name="title_alert_email_validation">Qwerteach</string>
    <string name="message_alert_email_validation">Adresse électronique incorrecte.</string>
    <string name="registration_success_toast">Inscription réussie</string>
    <string name="registration_error_message">Une erreur s\'est produite. Veuillez réessayer.</string>
    <string name="sign_in_connection_problem_message">Connexion au compte impossible. Réessayez lorsque vous serez connecté !</string>
    <string name="login_error_message">Votre e-mail ou mot de passe est incorrect. Esssayez à nouveau !</string>
    <string name="email_already_in_use_message">Erreur ! L\'adresse e-mail existe déjà. Essayez à nouveau.</string>
    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>
    <string name="search_button">RECHERCHER</string>
    <string name="edit_profile_button">EDITER</string>
    <string name="title_profile_activity">Voir mon profil</string>
    <string name="title_edit_profile_activity">Editer mon profil</string>
    <string name="firstname_textview_description_tab">Prénom</string>
    <string name="lastname_textview_description_tab">Nom de famille</string>
    <string name="description_textview_description_tab">Description</string>
    <string name="firstname_edittext_description_tab">Prénom</string>
    <string name="lastname_edittext_description_tab">Nom de famille</string>
    <string name="description_edittext_desciption_tab">Votre description</string>
    <string name="save_infos_profile_button_bloc_1">Sauvegarder profil</string>
    <string name="save_infos_profile_button_bloc_2">Sauvegarder infos</string>
    <string name="change_photo_profile_button">Changer image de profil</string>
    <string name="birthdate_textview_description_tab">Date de naissance</string>
    <string name="birthdate_edittext_description_tab">Date de naissance</string>
    <string name="infos_profile_registration_success_toast">Enregistrement réussi</string>
    <string name="infos_profile_registration_error_toast">Une erreur s\'est produite. Essayez à nouveau</string>
    <string name="connection_success_toast">Connexion réussie</string>
    <string name="description_tab_bloc_1_title">Informations générales</string>
    <string name="description_tab_bloc_1_subtitle">Ces informations sont visibles par tous</string>
    <string name="description_tab_bloc_2_title">Informations de contact</string>
    <string name="description_tab_bloc_2_subtitle">Ces informations ne sont pas visibles par d\'autres membres</string>
    <string name="email_text_view_description_tab">Adresse e-mail</string>
    <string name="email_edit_text_description_tab">Adresse e-mail</string>
    <string name="phone_number_text_view_description_tab">Téléphone</string>
    <string name="phone_number_edit_text_description_tab">Téléphone</string>
    <string name="formations_tab_title">Formations/Expérience</string>
    <string name="formations_tab_subtitle">Ces informations sont visibles par tous</string>
    <string name="formations_tab_profession_text_view">Quelle est votre profession ?</string>
    <string name="formations_tab_profession_edit_text">Profession</string>
    <string name="formations_tab_school_text_view">Quel est le nom de votre école ou université ?</string>
    <string name="formations_tab_school_edit_text">Nom de votre établissement</string>
    <string name="formations_tab_level_text_view">Niveau de formation</string>
    <string name="formations_tab_level_edit_text">Niveau de formation</string>
    <string name="formations_tab_save_infos_button">Sauvegarder formation</string>
    <string name="formations_tab_save_degrees_management_button">Gérer mes diplômes</string>
    <string name="create_small_add_activity_title">Ajouter annonce</string>
    <string name="course_material_text_view">Sélectionnez une matière</string>
    <string name="course_level_text_view">Pour quel(s) niveau(x) enseignez-vous cette matière ?</string>
    <string name="course_price_text_view">A quel tarif souhaitez-vous enseigner ? (€/h)</string>
    <string name="course_price_eddit_text">20 €/h</string>
    <string name="variable_course_price">Le tarif dépend du niveau</string>
    <string name="save_infos_small_ad_button">Sauvegarder annonce</string>
    <string name="other_material_course_text_view">Spécifiez</string>
    <string name="other_material_course_edit_text">Matière</string>
    <string name="to_become_a_teacher_activity_title">Poser candidature</string>
    <string name="error_save_infos_profile_toast_message">Impossible d\'enregistrer vos informations. Veuillez réessayer</string>
    <string name="course_category_text_view">Choisissez une catégorie</string>
    <string name="save_small_ad_success_true_message">Votre annonce a été enregistrée avec succès</string>
    <string name="save_small_ad_success_false_message">Impossible d\'enregistrer votre annonce. Essayez à nouveau</string>
    <string name="save_small_ad_success_exists_message">Vous possédez déjà une annonce de ce type</string>
    <string name="save_small_ad_success_need_message">Indiquez vos tarifs avant d\'enregistrer votre annonce</string>
    <string name="delete_small_ad_success_true_message">Votre annonce a bien été supprimée</string>
    <string name="delete_small_ad_success_false_message">Impossible de supprimer votre annonce. Essayez à nouveau</string>
    <string name="delete_small_ad_button">SUPPRIMER</string>
    <string name="edit_small_ad_button">Modifier</string>
    <string name="title_activity_update_small_ad">Editer annonce</string>
    <string name="categoty_text_view_update_small_ad">Catégorie</string>
    <string name="material_course_text_view_update_small_ad">Matière</string>
    <string name="level_text_view_update_small_ad">Niveaux</string>
    <string name="prices_text_view_update_small_ad">Tarifs</string>
    <string name="update_small_ad_button">Modifier annonce</string>
    <string name="update_small_ad_success_true_message">Vos informations ont été mises à jour</string>
    <string name="update_small_ad_success_false_message">Impossible d\'enregistrer vos infos. Essayez à nouveau</string>
    <string name="save_profile_button">ENREGISTRER</string>
    <string name="occupation_text_view_title">Occupation</string>
    <string name="description_text_view_title">Description</string>
    <string name="to_become_a_teacher_introduction_message">Vous souhaitez donner des cours en ligne ? Dès à présent, envoyez votre candidature.\n\nComplétez vos informations de profil et suivez attentivement chaque étape.</string>
    <string name="search_teacher_activity_title">Rechercher un professeur</string>
    <string name="app_label">Qwerteach</string>
    <string name="search_hint">Chercher un prof par matière</string>
    <string name="read_more_text_view">lire plus</string>
    <string name="course_names_teacher_profile_text_view">Matières enseignées</string>
    <string name="prices_teacher_profile_text_view">Tarif</string>
    <string name="detailed_prices_text_view">Voir le tarif détaillé</string>
    <string name="drop_down_menu_item_title">Choisir une matière</string>
    <string name="no_result_found_toast_message">Aucun résultat ne correspond à votre recherche.</string>
    <string name="teacher_search_filter_text_view_2">Triés par&#160;</string>
    <string name="lesson_reservation_button">Réserver un cours</string>
    <string name="lesson_reservation_activity_title">Réserver un cours</string>
    <string name="time_picker_button">Heure</string>
    <string name="date_picker_button">Date</string>
    <string name="lesson_start_time_title_text_view">Début du cours</string>
    <string name="lesson_duration_title_text_view">Durée</string>
    <string name="lesson_topic_group_title_text_view">Sélectionnez une catégorie</string>
    <string name="lesson_topic_title_text_view">Choisissez une matière</string>
    <string name="lesson_level_title_text_view">Indiquez votre niveau</string>
    <string-array name="hour_spinner_items">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
    </string-array>
    <string-array name="minut_spinner_items">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string name="booking_lesson_button">RESERVER</string>
    <string name="virtual_wallet_activity_title">Votre portefeuille</string>
    <string name="address_text_view">Adresse</string>
    <string name="street_number_text_view">N°</string>
    <string name="postal_code_text_view">Code postal</string>
    <string name="city_name_text_view">Ville</string>
    <string name="region_name_text_view">Région</string>
    <string name="country_name_text_view">Pays</string>
    <string name="nationality_text_view">Nationalité</string>
    <string name="residence_place_text_view">Lieu de résidence</string>
    <string name="registration_new_wallet_success_toast_message">Votre Portefeuille virtuel a été créé avec succès.</string>
    <string name="registration_new_wallet_error_toast_messsage">Impossible de créer votre Portefeuille virtuel. Veuillez remplir tous les champs.</string>
    <string name="internal_server_error">Impossible de créer votre Portefeuille virtuel. Essayez à nouveau.</string>
    <string name="payment_method_activity_title">Paiement</string>
    <string name="cancel_lesson_button">Annuler le cours</string>
    <string name="refuse_lesson_button">Refuser</string>
    <string name="accept_lesson_button">Accepter</string>
    <string name="update_lesson_button">Modifier</string>
    <string name="no_button">Non</string>
    <string name="yes_button">Oui</string>
    <string name="review_button">Laisser un avis</string>
    <string name="new_bank_account_alert_dialog_title">Ajouter un compte en banque</string>
    <string name="bank_account_type_text_view">Type de compte</string>
    <string name="iban_checkbox">IBAN</string>
    <string name="united_kingdom_checkbox">Royaumes-Unis</string>
    <string name="usa_checkbox">Etats-Unis</string>
    <string name="canada_checkbox">Canada</string>
    <string name="other_checkbox">Autre</string>
    <string name="lesson_details">Payements associés</string>
    <string name="payment_statut">Statut</string>
    <string name="payment_price">Montant (€)</string>
    <string name="payment_id">ID</string>
</resources>