<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_border"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <ImageView
            android:id="@+id/topic_group_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/lesson_other_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.0"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/lesson_start_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"/>

            <TextView
                android:id="@+id/lesson_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/lesson_status_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_grey"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept_lesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_lesson_button"
            android:background ="@drawable/green_button"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/update_lesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_lesson_button"
            android:background="@drawable/orange_button"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/cancel_lesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_lesson_button"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/refuse_lesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refuse_lesson_button"
            android:background="@android:color/transparent"
            android:textColor="@color/text_grey" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:background="@drawable/green_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button"
            android:background="@android:color/transparent"
            android:textColor="@color/text_grey"/>

        <Button
            android:id="@+id/review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_button"
            android:background="@drawable/green_button"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_details"
        android:background="@android:color/transparent"
        android:textColor="@color/pink"
        android:gravity="left|center_vertical"/>

    <LinearLayout
        android:id="@+id/details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_id"
                android:textColor="@color/dark_grey"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/id_linear_layout"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_price"
                android:textColor="@color/dark_grey"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/price_linear_layout"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_statut"
                android:textColor="@color/dark_grey"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/status_linear_layout"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>